# gw2-guild-members-bouncer-discord-bot

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
commands/: search_guild_member.py  set_gw2_api_key.py  set_gw2_guild_id.py
commands/utils/: gw2_api.py  write_json.py
